--- a/style.css
+++ b/style.css
@@ -94,25 +94,26 @@ footer p{
 
     header{
         text-align:center;
-        font-size: 3rem;
+        font-size: 25px;
     }
 
     .main-img{
-        font-size:30rem;
+        font-size:350px;
+        text-align:center;
      }
 
     
 footer{
     position:absolute;
     bottom:0;
-    height: 6rem;
+    height: 3rem;
     background-color: rgb(230, 201, 215);
     width:100%;
 }
 
     .svg{
        position:absolute;
-       bottom:6%;
+       bottom:3%;
        
         }
 }
