--- a/style.css
+++ b/style.css
@@ -85,8 +85,8 @@ footer p{
 @media screen and (max-width: 640px){
     
     body{
-      height:100vh;
-      width:100vw;
+      height:100%;
+      width:100%;
       background-repeat: no-repeat;
       overflow: hidden;
     }
@@ -97,7 +97,7 @@ footer p{
         font-size: 25px;
     }
 
-    .main-img{
+    .main-img a{
         font-size:250px;
         text-align:center;
      }
@@ -119,7 +119,7 @@ footer p{
 
     .svg{
        position:absolute;
-       bottom:7%;
+       bottom:5%;
       
        
         }
