--- a/style.css
+++ b/style.css
@@ -82,10 +82,10 @@ footer p{
 }
 
 
-@media screen and (max-width: 640px){
+@media (max-width: 800px){
     
     body{
-      height:100%;
+      height:100vh;
       width:100%;
       background-repeat: no-repeat;
       overflow: hidden;
@@ -94,32 +94,32 @@ footer p{
 
     header{
         text-align:center;
-        font-size: 25px;
+        font-size: 2.5rem;
+        margin-top:3rem;
     }
 
-    .main-img a{
-        font-size:250px;
-        text-align:center;
+    .main-img {
+        font-size:30rem;
+        margin-top: 15%;
      }
 
     
 footer{
     position:absolute;
     bottom:0;
-    height: 7rem;
-    background-color: rgb(230, 201, 215);
-    width:100%;
+    height: 8rem;
 }
 
 footer p{
     text-align:center;
-    font-size:20px;
-    margin: 5px;
+    font-size:1.5;
+    margin-bottom: 5px;
+    padding:2px;
 }
 
     .svg{
        position:absolute;
-       bottom:5%;
+       bottom:8%;
       
        
         }
