--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ header{
     justify-content:center;
     align-items:center;
     font-family:'Butterfly Kids', cursive;
-    font-size:3em;
+    font-size:3rem;
 }
 
 
@@ -82,44 +82,45 @@ footer p{
 }
 
 
-@media (max-width: 800px){
+@media (max-width: 600px){
     
     body{
       height:100vh;
       width:100%;
       background-repeat: no-repeat;
       overflow: hidden;
+      background-size:cover;
     }
 
 
-    header{
+    header h1, h2{
         text-align:center;
         font-size: 2.5rem;
-        margin-top:3rem;
+        padding-top: 15%;
     }
 
     .main-img {
-        font-size:30rem;
-        margin-top: 15%;
+        font-size:18rem;
+        margin-top: 50%;
      }
 
     
 footer{
     position:absolute;
     bottom:0;
-    height: 8rem;
+    height: 5rem;
 }
 
 footer p{
     text-align:center;
-    font-size:1.5;
-    margin-bottom: 5px;
-    padding:2px;
+    font-size:1.5rem;
+    margin-bottom: 1rem;
+    
 }
 
     .svg{
        position:absolute;
-       bottom:8%;
+       bottom:5%;
       
        
         }
